Closed Bug 1456664 Opened 6 years ago Closed 6 years ago

Right Oculus Touch Controller Axes Do Not Update When The Left Controller Is Off

Categories

(Core :: WebVR, defect)

x86
Windows 10
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox62 --- fixed

People

(Reporter: jshaughnessy, Assigned: daoshengmu)

Details

Attachments

(1 file)

Repro Steps :
Take battery out of left touch controller.
Query navigator.getGamepads to get the right touch controller.
The axes will not update.
Note :
If you start with both batteries in the controllers, the right touch controller axes work.
Then, remove the battery from the left controller. The right controller will still work for a short while.
After 5-10 seconds, the right controller axes stop working again.
This seems to be a bug at the browser level (not at the Oculus level) because the right controller's joystick works in Oculus Home even when the left controller is off.
Assignee: nobody → dmu
There is a little mistake when getting Thumbstick value from InputState. We should use ovrHandType to fetch it instead of the index i.
Comment on attachment 8980813 [details]
Bug 1456664 - Fix the right Oculus Touch axes no value issue when the left one is off;

https://reviewboard.mozilla.org/r/246990/#review253100

Good find, thanks!
Attachment #8980813 - Flags: review?(kgilbert) → review+
Pushed by dmu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/68a506acf664
Fix the right Oculus Touch axes no value issue when the left one is off; r=kip
https://hg.mozilla.org/mozilla-central/rev/68a506acf664
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: