Bug 1456664 - Fix the right Oculus Touch axes no value issue when the left one is off; r=kip

MozReview-Commit-ID: E4jxHnHjYUB

--HG--
extra : rebase_source : 04e5dedb8d953196ee56d1676b21a37cd7066d00